testsuite/escript/errors/errors007-foreach-iterator-same-name-as-function.src
foreach len in { 1, 3, 5, 7 }
  print( len );
endforeach
