testsuite/escript/errors/errors007-foreach-iterator-same-name-as-function.err
errors007-foreach-iterator-same-name-as-function.src:1:1: error: Cannot define a foreach iterator with the same name as function 'len'.
